--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
+/* Yleiset tyylit */
 body {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: #f5f5f5;
+}
+a {
+  text-decoration: none;
+  color: #119BFF;
+}
+a:hover {
+  text-decoration: underline;
+}
+header, nav, main, footer {
+  padding: 10px;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+/* Navigointipalkin tyylit */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+/* Sisältöalueen tyylit */
+#intro, #products {
+  background-color: #ffffff;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.responsive-image-text-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* grid-auto-rows: minmax(100px, auto); */
+  padding-bottom:10px;
+}
+
+.image_container {
+  grid-column:1;
+  padding: 16px;
+}
+.image_container > img {
+  width:90%;
+
+}
+.image_container > p {
+  margin:0 5% 0 5%;
+  text-align: left;
+}
+.text_container {
+  /* width:100%; */
+  grid-column:2;
+  text-align: left;
+}
+@media (max-width: 768px) {
+  .responsive-image-text-grid {
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(100px, auto);
+  }
+  
+  .image_container {
+    grid-row:2;
+    margin:10px 0;
+    padding:0;
+  }
+  .image_container > img {
+    width:100%;
+  }
+  .image_container > p {
+    margin:10px 0;
+    text-align: left;
+  }
+  .text_container {
+    grid-column:1;
+    grid-row:1;
+    text-align: left;
+  }
+}
+/* HTML: <div class="loader"></div> */
+.loader {
+  margin-left:20px;
+  width: 10px;
+  height: 10px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l5 1s infinite linear alternate;
+}
+@keyframes l5 {
+    0%  {box-shadow: 15px 0 #000, -15px 0 #0002;background: #000 }
+    33% {box-shadow: 15px 0 #000, -15px 0 #0002;background: #0002}
+    66% {box-shadow: 15px 0 #0002,-15px 0 #000; background: #0002}
+    100%{box-shadow: 15px 0 #0002,-15px 0 #000; background: #000 }
+}
+
+footer {
+  font-size: 0.8em;
 }
