--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 /* Yleiset tyylit */
 body {
   font-family: 'Roboto', sans-serif;
-  color: #333;
+  color: #844b1a;
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
 }
 a {
   text-decoration: none;
-  color: #119BFF;
+  /* color: #119BFF; */
+  color: #2c5f83;
 }
 a:hover {
   text-decoration: underline;
@@ -37,7 +38,7 @@ nav ul li a {
 }
 
 /* Sisältöalueen tyylit */
-#intro, #products {
+.content {
   background-color: #ffffff;
   margin: 10px auto;
   padding: 10px;
@@ -111,4 +112,25 @@ nav ul li a {
 
 footer {
   font-size: 0.8em;
+}
+
+
+/* Products */
+
+.products {
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+  text-align:left;
+  gap:10px;
+}
+.product {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  padding:6px;
+}
+.left > h3  {
+  margin: 0 10px 0 0;
+}
+.right > img {
+  height:150px;
 }
