--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,13 @@ nav ul li a {
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
+/* .fling-minislide {width:350px; height:300px; overflow:hidden; position:relative; } */
+.fling-minislide img{ position:absolute; left:0; animation:fling-minislide 15s infinite; opacity:0; width: 100%; height: 400px;object-fit: cover;}
+.fling-minislide {width:100%; height:0px; padding-bottom: 400px; overflow:hidden; position:relative; }
+@keyframes fling-minislide {0%{opacity: 0;}50%{opacity:1;}60%{opacity: 0;}}
+.fling-minislide img:nth-child(2){animation-delay:0s;}
+.fling-minislide img:nth-child(1){animation-delay:7.5s;}
+
 .responsive-image-text-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -86,12 +93,10 @@ nav ul li a {
   }
   .image_container > p {
     margin:10px 0;
-    text-align: left;
   }
   .text_container {
     grid-column:1;
     grid-row:1;
-    text-align: left;
   }
 }
 /* HTML: <div class="loader"></div> */
