--- a/src/Contact.css
+++ b/src/Contact.css
@@ -9,22 +9,22 @@
     }
 }
 /* Yhteydenotto-lomake */
-#contact-form {
+.simple-form {
     display: flex;
     flex-direction: column;
     gap:10px;
-}
-#contact-form > label {
-    text-align: left;
     margin:0 auto;
     width:min(100%,500px);
+}
+.simple-form > label {
+    text-align: left;
+    width:min(100%,800px);
     display: grid;
     grid-template-columns: 100px 1fr;
 }
 .form-buttons {
     display: grid;
     width:min(100%,500px);
-    margin:0 auto;
     justify-items: end;
 }
 @media screen and (max-width: 992px) {
@@ -34,7 +34,6 @@
 .rate {
     /* float: left; */
     height: 46px;
-    padding: 0 10px;
     width: fit-content;
 }
 .rate:not(:checked) > input {
@@ -65,4 +64,22 @@
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
+}
+.star:before {
+    content: '★ ';
+    font-size: 20px;
+}
+.checked {
+    color: #ffc700;   
+}
+.feedback {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    width:min(100%,800px);
+    margin:0 auto;
+}
+.feedback > textarea {
+    height:100px;
+    
 }
