--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,29 @@ footer {
   width:100%;
   justify-items: right;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  left:-100px;
+  /* min-width: 160px; */
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover > svg {
+  fill: #000;
+}
 .clear {
   clear: both;
 }
